# xoxo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deltas.md  mention.md  performance.md
.changelogs/: 2026-04-18-01.md  2026-04-19-01.md  2026-04-20-01.md  2026-04-20-02.md  2026-04-21-01.md  2026-04-22-01.md  2026-04-23-01.md  2026-04-24-01.md  2026-04-25-01.md
.claude/skills/rust-best-practices/: SKILL.md
.not-crates/agent/: mod.rs
.not-crates/agent/blueprint_store/: builtin.rs  mod.rs
.not-crates/agent/execution_context/: CLAUDE.md  bash_session.rs  mod.rs  process_registry.rs
.not-crates/agent/handle/: mod.rs  nats.rs
.not-crates/agent/handle/spawner/: mod.rs  new.rs  resume.rs  wiring.rs
.not-crates/agent/runner/: mod.rs
crates/agents/agentix/: Cargo.toml
crates/agents/agentix/src/: lib.rs  skills.rs  tooling.rs
crates/agents/agentix/src/indexing/: chunk.rs  mod.rs  vector_store.rs
crates/agents/agentix/src/indexing/stores/: brute_force.rs  hnsw.rs  instant_distance.rs  mod.rs  selector.rs
crates/agents/agentix/src/tools/: learn_skill.rs  list_all_tools.rs  list_skills.rs  mod.rs  run_tools_concurrently.rs  write_todo_list.rs
crates/agents/concierge/: Cargo.toml
crates/agents/concierge/src/: lib.rs
crates/agents/nerd/: Cargo.toml
crates/agents/nerd-ast/: Cargo.toml
crates/agents/nerd-ast/src/: assembly.rs  bash.rs  c.rs  c_sharp.rs  dart.rs  elixir.rs  erlang.rs  find_symbol.rs  fortran.rs  graphql.rs  groovy.rs  haskell.rs  java.rs  javascript.rs  julia.rs  kotlin.rs  language.rs  lib.rs  lua.rs  matlab.rs  nix.rs  objc.rs  pascal.rs  powershell.rs  proto.rs  python.rs  r.rs  scala.rs  solidity.rs  swift.rs  vb_dotnet.rs  zig.rs
crates/agents/nerd-ast/src/languages/: assembly.rs  bash.rs  c.rs  c_sharp.rs  cpp.rs  dart.rs  data.rs  elixir.rs  erlang.rs  fortran.rs  go.rs  graphql.rs  groovy.rs  haskell.rs  java.rs  javascript.rs  julia.rs  kotlin.rs  lua.rs  matlab.rs  mod.rs  nix.rs  objc.rs  pascal.rs  perl.rs  php.rs  powershell.rs  proto.rs  python.rs  r.rs  ruby.rs  rust.rs  scala.rs  solidity.rs  swift.rs  vb_dotnet.rs  zig.rs
crates/agents/nerd-ast/src/tools/: ensure_import.rs  find_references.rs  find_symbol.rs  find_tests_for_symbol.rs  mod.rs  patch_symbol.rs  rename_symbol.rs
crates/agents/nerd/src/: lib.rs  prompt.rs
crates/agents/nerd/src/coding/: mod.rs
crates/agents/nerd/src/coding/ast/: cpp.rs  data.rs  find_symbol.rs  go.rs  language.rs  mod.rs  perl.rs  php.rs  ruby.rs  rust.rs  structs.rs
crates/agents/nerd/src/coding/noise_stripper/: c_family.rs  c_sharp.rs  dart.rs  elixir.rs  erlang.rs  fortran.rs  go.rs  graphql.rs  groovy.rs  haskell.rs  javascript.rs  julia.rs  kotlin.rs  lua.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  shell.rs  swift.rs  toml.rs  vb_net.rs  yaml.rs
crates/agents/nerd/src/tools/: ensure_import.rs  eval_script.rs  exec.rs  find_files.rs  find_patterns.rs  find_references.rs  find_symbol.rs  find_tests_for_symbol.rs  http.rs  inspect_code_structure.rs  list_all_tools.rs  mod.rs  patch_file.rs  patch_symbol.rs  process.rs  read_file.rs  rename_symbol.rs  write_file.rs
crates/agents/nerd/src/tools/patch_file/: apply.rs  diff_preview.rs  mod.rs  tests.rs  tool.rs  types.rs
crates/agents/nerd/src/types/: mod.rs
crates/lib/xoxo-acp/: Cargo.toml
crates/lib/xoxo-acp/src/: error.rs  lib.rs  server.rs  session.rs
crates/lib/xoxo-core/: Cargo.toml
crates/lib/xoxo-core/docs/: bus.md  llm_and_agents.md
crates/lib/xoxo-core/src/: bus.rs  lib.rs  log_layer.rs  model_catalog.rs  syntax_highlighter.rs
crates/lib/xoxo-core/src/agents/: handles.rs  mod.rs  runner.rs  spawner.rs  structs.rs
crates/lib/xoxo-core/src/app_state/: mod.rs  repository.rs  structs.rs
crates/lib/xoxo-core/src/chat/: mod.rs  structs.rs  structs_tests.rs  user_facing.rs  user_facing_tests.rs
crates/lib/xoxo-core/src/config/: env_extensions.rs  loader.rs  mcp.rs  mod.rs  structs.rs
crates/lib/xoxo-core/src/helpers/: masking.rs  mod.rs  uuid.rs
crates/lib/xoxo-core/src/llm/: README.md  facade.rs  mod.rs  rig_stream.rs
crates/lib/xoxo-core/src/llm/backends/: ai_lib.rs  mod.rs  rig.rs  selector.rs
crates/lib/xoxo-core/src/llm/facade/: conversions.rs  mod.rs  runtime.rs  service.rs  tests.rs  types.rs
crates/lib/xoxo-core/src/llm/provider/: mod.rs  registry.rs  structs.rs
crates/lib/xoxo-core/src/llm/providers/: mod.rs
crates/lib/xoxo-core/src/mcp/: catalog.rs  client.rs  error.rs  mod.rs  types.rs
crates/lib/xoxo-core/src/storage/: api.rs  helpers.rs  mod.rs  tests.rs  types.rs
crates/lib/xoxo-core/src/tooling/: mcp_tools.rs  mod.rs  registry.rs  structs.rs
crates/lib/xoxo-core/src/tooling/execution_context/: bash_session.rs  mod.rs  process_registry.rs  tests.rs  todo_list.rs
crates/lib/xoxo-core/syntaxes/: RUST.sublime-syntax
crates/lib/xoxo-tui/: Cargo.toml  hedgehog
crates/lib/xoxo-tui/src/: app.rs  lib.rs  syntax_highlighter.rs  tool_format.rs  tui.rs  ui.rs
crates/lib/xoxo-tui/src/app/: commands.rs  events.rs  history.rs  mention.rs  mention_file_walker.rs  modal.rs  stats.rs  sync.rs
crates/lib/xoxo-tui/src/app/events/: mention_popup.rs  mod.rs  modals.rs  tests.rs
crates/lib/xoxo-tui/src/app/modal/: config.rs  menu.rs  provider_pane.rs  tests.rs
crates/lib/xoxo-tui/src/tool_format/: exec.rs  mod.rs  patch_file.rs  tests.rs  todo_list.rs  write_file.rs
crates/lib/xoxo-tui/src/ui/: conversation.rs  header.rs  history.rs  input.rs  markdown.rs  mention.rs  modal.rs  status_bar.rs  tool_lines.rs
crates/lib/xoxo-tui/syntaxes/: TOML.sublime-syntax
docs/adr/: 0001-agents-and-subagents.md  0002-deterministic-code-intelligence-for-nerd.md  0003-embeddings-and-vector-search.md  0004-mcp-client-architecture-for-xoxo.md
