[workspace]
resolver = "3"
members = [
    "crates/bin/xoxo",
    "crates/agents/agentix",
    "crates/agents/nerd-ast",
    "crates/agents/nerd",
    "crates/agents/concierge",
    "crates/lib/xoxo-core",
    "crates/lib/xoxo-tui",
    "crates/lib/xoxo-acp",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.94"
license = "MIT"
publish = false

[workspace.dependencies]
# Internal
agentix = { path = "crates/agents/agentix" }
nerd-ast = { path = "crates/agents/nerd-ast" }
xoxo-core = { path = "crates/lib/xoxo-core" }
xoxo-tui = { path = "crates/lib/xoxo-tui" }
xoxo-acp = { path = "crates/lib/xoxo-acp" }
nerd = { path = "crates/agents/nerd" }
concierge = { path = "crates/agents/concierge" }

# Genuinely cross-crate
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
tracing = "0.1"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "registry"] }

[workspace.lints.rust]
# @todo I don't like it
warnings = "deny"
