[package]
name = "agentix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared agentic toolkit bindings for xoxo agents."

[dependencies]
xoxo-core = { workspace = true }
serde_json = { workspace = true }
inventory = "0.3.24"

[lints]
workspace = true
