[package]
name = "concierge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Broader personal-assistant toolkit for xoxo. Opt-in via the `concierge` feature of the binary."

[dependencies]
xoxo-core = { workspace = true }

[lints]
workspace = true
