[package]
name = "nerd-ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "AST-backed code intelligence for nerd."

[dependencies]
serde = { workspace = true }
ignore = "0.4"
tree-sitter = "0.26.8"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-json = "0.24.8"
tree-sitter-bash = "0.25.1"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-lua = "0.5.0"
tree-sitter-perl = "1.1.2"
tree-sitter-swift = "0.7.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-java = "0.23.5"
tree-sitter-haskell = "0.23.1"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-matlab = "1.3.0"
tree-sitter-r = "1.2.0"
tree-sitter-scala = "0.26.0"
tree-sitter-erlang = "0.16.0"
tree-sitter-groovy = "0.1.2"
tree-sitter-fortran = "0.5.1"
tree-sitter-elixir = "0.3.5"
tree-sitter-dart = "0.1.0"
tree-sitter-nix = "0.3.0"
tree-sitter-powershell = "0.26.3"
tree-sitter-zig = "1.1.2"
tree-sitter-julia = "0.23.1"
tree-sitter-pascal = "0.10.2"
tree-sitter-objc = "3.0.2"
tree-sitter-vb-dotnet = "0.1.0"
tree-sitter-solidity = "1.2.13"
tree-sitter-graphql = "0.1.0"
tree-sitter-asm = { version = "0.24.0", features = ["wasm"] }
tree-sitter-proto = "0.4.0"

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
