[package]
name = "nerd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Coding-assistant toolkit for xoxo."

[features]
default = ["extension-language-detection"]
extension-language-detection = []

[dependencies]
agentix = { workspace = true }
xoxo-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tempfile = "3.8"
md5 = "0.8"
inventory = "0.3.24"
ignore = "0.4"
regex = "1"
tree-sitter = "0.26.8"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-json = "0.24.8"
tree-sitter-bash = "0.25.1"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-lua = "0.5.0"
tree-sitter-perl = "1.1.2"
tree-sitter-swift = "0.7.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-yaml = "0.7.2"

[lints]
workspace = true
